# pipecat-walkthrough

./: .env.example  .gitignore  README.md  pyproject.toml
bots/pizza/: flows.py  persona.py
bots/shared/: context.py  debug_observer.py  guardrails.py  observers.py  prometheus_observer.py  raw_audio_serializer.py  vector_memory.py  working_memory.py
bots/tech-support/: guardrails_server.py  local_bot.py  memory_server.py  observability_server.py  persona.py  rtvi_server.py  semantic_memory_server.py  transfer_server.py  webrtc_server.py  ws_server.py
docs/: 01-architecture.md  02-local-transport.md  03-websocket-transport.md  04-webrtc-transport.md  05-call-transfer.md  06-observability.md  07-rtvi-observers.md  PLAN.md  TOUR-PLAN.md  requirements.md
docs/learning/: M1-core-pipeline.md  M2-websocket.md  M3-webrtc.md  M4-call-transfer.md  M5-observability.md  M5.5-providers.md  M6-rtvi-observers.md  M7-guardrails.md  M8-working-memory.md  M9-semantic-memory.md
docs/researches/: AI Voice Guardrails Report.md  M8-M9-memory-plan.md  ai-agent-memory-2026.md
frontend/: websocket.html
infra/: docker-compose.yml  prometheus.yml
infra/grafana/dashboards/: pipecat.json
infra/grafana/provisioning/dashboards/: default.yml
scripts/: start-infra.sh
