[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pipecat-walkthrough"
version = "0.1.0"
description = "E2E AI Voice System — Pipecat Walkthrough"
requires-python = ">=3.11"
dependencies = [
    # Install pipecat from local source with required extras
    "pipecat-ai[openai,silero,webrtc,local] @ file:///Users/marcelo.mendoza/dev/pipecat",
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
observability = [
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.25.0",
    "prometheus-client>=0.20.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["bots"]
